--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,25 @@
 services:
   enshrouded:
-    build: .
+    image: ghcr.io/mrguato/enshrouded-docker:latest
     container_name: enshrouded
-    environment:
-      - APP_ID=2278520
-      - SERVER_NAME=JD-Enshrouded
-      - SERVER_PASSWORD=yourpassword
-      - FORCE_CONFIG_REWRITE=1   # set to 0 after first boot if you want
-      - UPDATE_ON_START=1
-      - RESET_WINEPREFIX=0
-    volumes:
-      - ./data:/home/steam/enshrouded
-      - ./wine:/home/steam/.wine
+    restart: unless-stopped
+
     ports:
       - "15637:15637/udp"
       - "27015:27015/udp"
-    restart: unless-stopped
+
+    environment:
+      UPDATE_ON_START: "1"
+      SERVER_NAME: "Ex Enshrouded Server Name"
+      SERVER_SLOTS: "16"
+      SERVER_PASSWORD: "SuperStrongPW!"
+      PORT: "15637"
+      STEAM_PORT: "27015"
+
+      # Optional but useful
+      FORCE_CONFIG_REWRITE: "1"   # set to 1 if you want env vars to overwrite JSON
+      RESET_WINEPREFIX: "0"       # set to 1 once if Wine gets cursed again
+
+    volumes:
+      - ./data:/home/steam/enshrouded
+      - ./wine:/home/steam/.wine
